修改第二章 使得其更加通顺
添加一些链接

--- a/docs/第2章. ES6 概要.md
+++ b/docs/第2章. ES6 概要.md
@@ -1,8 +1,7 @@
 # ES6 概要
 
-ES6对一些已有的功能进行了非破坏性更新，其中的大部分我们可以理解为语法糖，称之为语法糖，意味着，这些新语法能做的事情其实用ES5也可以做，只是会稍微复杂一些。本章我们将着重讨论这些语法糖，看完之后，你一定会对ES6的一些新功能有新理解。考虑到 `let` 和 `const` 从某种层面上可以看做是`var`的拓展，虽然它们不是语法糖，我们也会在在本章中进行讨论。
+ES6为一些已有的功能提供了非破坏性更新，这类更新中的大部分我们可以理解为语法糖，称之为语法糖，意味着，这类新语法能做的事情其实用ES5也可以做，只是会稍微复杂一些。本章我们将着重讨论这些语法糖，看完之后，可能你会对一些你很熟悉的ES6新语法有不一样的理解。
 
-我在平时使用React的过程中，已经享受到了简写的对象字面量带来的好处，本文也从此开始叙述。
 
 ## 对象字面量
 
@@ -16,11 +15,11 @@ var book = {
 }
 ```
 
-ES6 对对象字面量的语法带来了一些改进：包括属性/方法的简洁表示，可计算的属性名等等，我们逐一来看：
+ES6 为对象字面量的语法带来了一些改进：包括属性/方法的简洁表示，可计算的属性名等等，我们逐一来看：
 
 ### 属性的简洁表示法
 
-你有没有遇到过这种场景，我们声明了一个对象，对象中的若干属性，其值由变量表示，且该变量的名称和属性名是一样的。比如说如下，我们有个名为 `listeners` 的数组，我们想把它赋值给`events`对象中的`listeners`属性，一般说来，用ES5我们会用下面这种写法：
+你有没有遇到过这种场景，一个我们声明的对象中包含若干属性，其属性值由变量表示，且变量名和属性名一样的。比如下面这样，我们想把一个名为 `listeners` 的数组赋值给`events`对象中的`listeners`属性，用ES5我们会这样做：
 
 ```js
 var listeners = []
@@ -31,7 +30,7 @@ var events = {
 }
 ```
 
-ES6则运行我们简写成下面这种形式：
+ES6则允许我们简写成下面这种形式：
 
 ```js
 var listeners = []
@@ -39,13 +38,13 @@ function listen() {}
 var events = { listeners, listen }
 ```
 
-怎么样，是不是感觉简洁了许多，ES6让我们在不影响语义的情况下减少了重复代码。
+怎么样，是不是感觉简洁了许多，使用对象字面量的简洁写法让我们在不影响语义的情况下减少了重复代码。
 
-ES6提供了众多让你的代码更简洁，语义更清晰的语法，这只是其中之一，当你习惯了使用这些语法，你的代码的可读性，可维护性，你的开发效率都会大大提升。
+这是ES6带来的好处之一，它提供了众多更简洁，语义更清晰的语法，让我们的代码的可读性，可维护性大大提升。
 
 ### 可计算的属性名
 
-对象字面量的另一个重要更新是允许你使用可计算的属性名，在ES5中我们也可以给对象添加属性名为变量的属性，以下述代码为例，需要这样做，声明一个名为`expertise`的变量，然后通过`person[expertise]`这种形式把变量添加为对象`person`的属性：
+对象字面量的另一个重要更新是允许你使用可计算的属性名，在ES5中我们也可以给对象添加属性名为变量的属性，一般说来，我们要按下面方法这样做，首先声明一个名为`expertise`的变量，然后通过`person[expertise]`这种形式把变量添加为对象`person`的属性：
 
 ```js
 var expertise = 'journalism'
@@ -59,7 +58,7 @@ person[expertise] = {
 }
 ```
 
-ES6 中，对象字面量可以使用计算属性名了，把任何表达式放在中括号中，表达式的值就是对应的属性名，针对上面的代码，用ES6可以这样写：
+ES6 中，对象字面量可以使用计算属性名了，把任何表达式放在中括号中，表达式的运算结果将会是对应的属性名，上面的代码，用ES6可以这样写：
 
 ```js
 var expertise = 'journalism'
@@ -73,7 +72,7 @@ var person = {
 }
 ```
 
-不过需要注意的是，**简写属性和计算的属性名不可同时使用**。这是因为，简写属性是一种在编译阶段的就会生效的语法糖，而计算的属性名则需要在运行时生效。如果你把二者混用，代码会报错。而且二者混用往往还会降低代码的可读性，所以在语言层面上限制二者不能混用也是个好事。
+不过需要注意的是，**简写属性和计算的属性名不可同时使用**。这是因为，简写属性是一种在编译阶段的就会生效的语法糖，而计算的属性名则在运行时才生效。如果你把二者混用，代码会报错。而且二者混用往往还会降低代码的可读性，所以JavaScript在语言层面上限制二者不能混用也是个好事。
 
 ```js
 var expertise = 'journalism'
@@ -89,7 +88,8 @@ var person = {
 ```
 
 遇到以下情景时，可计算的属性名会让我们的代码更简洁：
-1. 某个新对象的属性引自另一个对象，如下所示：
+
+1. 某个新对象的属性引自另一个对象：
 
 ```js
 var grocery = {
@@ -104,9 +104,10 @@ var groceries = {
 }
 ```
 
-2. 所构建的对象的属性名来自函数参数。如果使用ES5来处理这种问题，我们需要先声明一个对象字面量，再动态的添加属性，再返回这个对象。下面的例子中，我们创建了一个响应Ajax请求的函数，这个函数的作用在于，请求失败时，返回的对象拥有一个名为`error`属性及对应的描述，请求成功时，该对象拥有一个名为`success`属性及对应的描述。
+2. 需构建的对象的属性名来自函数参数。如果使用ES5来处理这种问题，我们需要先声明一个对象字面量，再动态的添加属性，再返回这个对象。下面的例子中，我们创建了一个响应Ajax请求的函数，这个函数的作用在于，请求失败时，返回的对象拥有一个名为`error`属性及对应的描述，请求成功时，该对象拥有一个名为`success`属性及对应的描述。
 
 ```js
+// ES5 写法
 function getEnvelope(type, description) {
   var envelope = {
     data: {}
@@ -119,7 +120,7 @@ function getEnvelope(type, description) {
 使用ES6提供的利用计算属性名，更简洁的实现如下：
 
 ```js
-// es6
+// ES6 写法
 function getEnvelope(type, description) {
   return {
     data: {},
@@ -128,11 +129,11 @@ function getEnvelope(type, description) {
 }
 ```
 
-ES6中的对象属性可以简写，方法其实也是可以的。
+对象字面量的属性可以简写，方法其实也是可以的。
 
 ### 方法定义
 
-以下面代码为例，我们看看传统上如何定义方法，这里我们构建了一个事件发生器，其中的`on`方法用以注册事件，`emit`方法用以执行事件：
+我们先看看传统上如何定义对象方法，下述代码中，我们构建了一个事件发生器，其中的`on`方法用以注册事件，`emit`方法用以执行事件：
 
 ```js
 var emitter = {
@@ -154,7 +155,7 @@ var emitter = {
 }
 ```
 
-ES6 运行我们省略对象方法的`function`关键字及之后的冒号，改写后的代码如下：
+ES6 的对象字面量方法简写允许我们省略对象方法的`function`关键字及之后的冒号，改写后的代码如下：
 
 ```js
 var emitter = {
@@ -176,13 +177,11 @@ var emitter = {
 }
 ```
 
-怎么样，有没有感觉使用ES6语法，代码稍微简洁了一些。
-
-ES6中的箭头函数可谓大名鼎鼎了，它有一些特别的优点(关于`this`)，也许你已经很熟悉它了，我也一直在用它，不过有些细节之前却一直不了解，比如箭头函数的几种简写形式及使用注意事项。
+ES6中的箭头函数可谓大名鼎鼎了，它有一些特别的优点(关于`this`)，可能你和我一样，使用箭头函数很久了，不过有些细节我之前却一直不了解，比如箭头函数的几种简写形式及使用注意事项。
 
 ## 箭头函数
 
-传统上，JS中声明的函数，需要有函数名，一系列参数和函数体，如下：
+JS中声明的普通函数，一般有函数名，一系列参数和函数体，如下：
 
 ```js
 function name(parameters) {
@@ -190,7 +189,7 @@ function name(parameters) {
 }
 ```
 
-如果定义的是匿名函数则没有函数名，匿名函数通常会被赋值给一个变量，属性，有时候会被直接调用：
+普通匿名函数则没有函数名，匿名函数通常会被赋值给一个变量/属性，有时候还会被直接调用：
 
 ```js
 var example = function (parameters) {
@@ -198,7 +197,7 @@ var example = function (parameters) {
 }
 ```
 
-ES6 为我们提供了一种写匿名函数的新方法，即使用箭头函数。箭头函数不需要使用`function`关键字，其参数和函数体之间以`=>`相连接：
+ES6 为我们提供了一种写匿名函数的新方法，即箭头函数。箭头函数不需要使用`function`关键字，其参数和函数体之间以`=>`相连接：
 
 ```js
 var example = (parameters) => {
@@ -213,13 +212,33 @@ var example = (parameters) => {
 - 箭头函数也没有`prototype`属性；
 - 箭头函数绑定了词法作用域，不会修改`this`的指向。
 
-最后一点是箭头函数最大的特点，我们仔细看看这一点。
+最后一点是箭头函数最大的特点，我们来仔细看看。
 
 ### 词法作用域
 
-我们在箭头函数的函数体内使用的`this`,`arguments`,`super`等都指向包含箭头函数的作用域，箭头函数本身不产生新的作用域。下述代码中，我们创建了一个名为`timer`的对象，它的属性`seconds`用以计时，方法`start`用以开始计时，若我们在若干秒后调用`start`方法，将打印出当前的`seconds`值。
+我们在箭头函数的函数体内使用的`this`,`arguments`,`super`等都指向包含箭头函数的上下文，箭头函数本身不产生新的上下文。下述代码中，我们创建了一个名为`timer`的对象，它的属性`seconds`用以计时，方法`start`用以开始计时，若我们在若干秒后调用`start`方法，将打印出当前的`seconds`值。
 
 ```js
+// ES5
+var timer = {
+  seconds: 0,
+  start() {
+    setInterval(function(){
+      this.seconds++
+    }, 1000)
+  }
+}
+
+timer.start()
+setTimeout(function () {
+  console.log(timer.seconds)
+}, 3500)
+
+> undefined
+
+```
+```
+// ES6
 var timer = {
   seconds: 0,
   start() {
@@ -237,7 +256,7 @@ setTimeout(function () {
 
 ```
 
-如果这里的`start`方法中，我们没用箭头函数而用的是常规的匿名函数，`this`将指向`window`了，想要让代码正常工作，我们需要在`start`方法开头处插入`var self = this`，然后替换匿名函数函数体中的`this`为`self`。
+第一段代码中`start`方法使用的是常规的匿名函数定义，在调用时`this`将指向了`window`，`console`出的结果为`undefined`，想要让代码正常工作，我们需要在`start`方法开头处插入`var self = this`，然后替换匿名函数函数体中的`this`为`self`，第二段代码中，我们使用了箭头函数，就不会发生这种情况了。
 
 还需要说明的是，箭头函数的作用域也不能通过`.call`,`.apply`,`.bind`等语法来改变，这使得箭头函数的上下文将永久不变。
 
@@ -265,7 +284,7 @@ function puzzle() {
 puzzle('a', 'b', 'c')(1, 2, 3)
 ```
 
-答案是`a,b,c`,箭头函数的特殊性决定其本身没有`arguments`对象，这里的`arguments`其实是其父函数`puzzle`的。
+答案是`a,b,c`,**箭头函数的特殊性决定其本身没有`arguments`对象**，这里的`arguments`其实是其父函数`puzzle`的。
 
 前面我们提到过，箭头函数还可以简写，接下来我们一起看看。
 
@@ -1367,7 +1386,12 @@ function checklist(items) {
 总的来说，`const`不允许重新指定值，使用的是块作用域，存在TDZ。`let`则允许重新指定值，其它方面和`const`类似，而`var`声明使用函数作用域，可以重新指定值，可以在未声明前调用，考虑到这些，推荐尽量不要使用`var`声明了。
 
 
-### 参考
+### 有用的链接
+
+- [第一章: ECMAScript简史 和 JavaScript的未来](https://github.com/zhangwang1990/PracticeModernJavaScript/blob/master/docs/ECMAScript%20%E5%92%8C%20JavaScript%E7%9A%84%E6%9C%AA%E6%9D%A5.md)
+- [重温ES6核心概念和基本用法](https://segmentfault.com/a/1190000009885614)
+- [原文链接：ES6 Essentials](https://ponyfoo.com/books/practical-modern-javascript/chapters/2#read）
+
 
 
 
