修复SF里三车和尚 童鞋提出的声明问题
var left = 5
var right = 7; // 这一句必须加分号，要不然下一句认为是声明语句
[left, right] = [right, left]

--- a/docs/第2章. ES6 概要.md
+++ b/docs/第2章. ES6 概要.md
@@ -555,8 +555,7 @@ console.log(lastName)
 在ES5中，你需要借助第三个变量，才能完成两个变量值的交换，如下：
 
 ```js
-var left = 5
-var right = 7
+var left = 5, right = 7;
 var aux = left
 left = right
 right = aux
@@ -565,8 +564,7 @@ right = aux
 使用解构，一切就简单多了：
 
 ```js
-var left = 5
-var right = 7
+var left = 5, right = 7;
 [left, right] = [right, left]
 ```
 
