第三章，类部分直译完成
类的拓展类的属性方法的定义

--- a/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
+++ b/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
@@ -1,5 +1,9 @@
 # Classs,Symbols,Objects 和 Decorators
 
+**本章尚未完成，请先不要编辑本章**
+
+
+
 前面我们已经学习了ES6对JS的基本改进，是时候学习一些别的特性了--classes 和 symbols。ES6中新增的类（classes）提供了一种以原型链来模仿传统基于类编程的模式。而Symbol则是JavaScript中的一种新的基本类型（像字符串，布尔值，数值一样），它可以用来定义协议，本章中，我们将说明这是什么意思。本章说完类和`symbols`后将继续讨论一些新增如`ES6`的内置静态方法。
 
 ## Classes
@@ -105,11 +109,261 @@ const jake = new JakePerson()
 
 ### 类中的属性和方法
 
+值得我们注意的是类声明中的`constructor`方法是可选的。下面用类声明和用常规构造函数声明的`Fruit`是一样的：
 
 
 
+```javascript
+class Fruit {
+}
+function Fruit() {
+}
+```
 
 
 
+所有被传入`Log()`的参数都将作为`Log`中`constructor`的参数，这些参数可以用以初始化类的实例。
 
 
+
+```javascript
+class Log {
+  constructor(...args) {
+    console.log(args)
+  }
+}
+new Log(&apos;a&apos;, &apos;b&apos;, &apos;c&apos;)
+// &amp;lt;- [&apos;a&apos; &apos;b&apos; &apos;c&apos;]
+```
+
+
+
+下面的代码则表示在创建类`Counter`类的实例时，我们会为该实例初始化一个名为`count`的属性。`get next`方法则表示类`Counter`实例将有一个`next`方法，用以返回调用调用结果。
+
+
+
+```javascript
+class Counter {
+  constructor(start) {
+    this.count = start
+  }
+  get next() {
+    return this.count++
+  }
+}
+```
+
+
+
+你可以像下面这样使用`Counter`类，每一次`.next`被调用的时候，`count`值增加1，虽然有效，但是这种方法一般说来比使用`get`属性访问器其要好，我们需要注意，不应该乱用`get`这里属性访问器。滥用属性访问器的对象一般都会变得让人疑惑。
+
+```javascript
+const counter = new Counter(2)
+console.log(counter.next)
+//  2
+console.log(counter.next)
+//  3
+console.log(counter.next)
+//  4
+```
+
+
+
+当与设置器配对时，访问者可能会在对象及其底层数据存储之间提供有趣的桥梁。我们可以考虑如下例子，这里我们定义了一个类，使用提供的存储`key`，它可以用来在`localStorage`中存储和取出`JSON`数据。
+
+
+
+```javascript
+class LocalStorage {
+  constructor(key) {
+    this.key = key
+  }
+  get data() {
+    return JSON.parse(localStorage.getItem(this.key))
+  }
+  set data(data) {
+    localStorage.setItem(this.key, JSON.stringify(data))
+  }
+}
+```
+
+
+
+你可以按下面这样使用`LocalStorage`类。所有分配给`ls.data`的值将被转换为JSON对象字符串，并存储在`localStorage`中。然后，当需要读取时，想用的`key`将用以在之前存储的内容中读取数据，以JSON的格式进行解析，并返回。
+
+```javascript
+const ls = new LocalStorage(&apos;groceries&apos;)
+ls.data = [&apos;apples&apos;, &apos;bananas&apos;, &apos;grapes&apos;]
+console.log(ls.data)
+// &amp;lt;- [&apos;apples&apos;, &apos;bananas&apos;, &apos;grapes&apos;]
+```
+
+
+
+除了使用`getters`和`setters`,我们也可以定义常规的实例方法，前面我们已经定义过`Fruit`类。下面我们还定义了一个可以吃水果的`Person`类，我们可以实例化一个`fruit`和一个`person`，然后让`person`吃`fruit`。最后由于这个人吃完了整个水果,`person`的`satiety`(饱食度)上升到了40。
+
+```javascript
+class Person {
+  constructor() {
+    this.satiety = 0
+  }
+  eat(fruit) {
+    while (fruit.pieces &amp;gt; 0) {
+      fruit.bite(this)
+    }
+  }
+}
+const plum = new Fruit(&apos;plum&apos;, 40)
+const person = new Person()
+person.eat(plum)
+console.log(person.satiety)
+// &amp;lt;- 40
+```
+
+
+
+有时候我们需要在类层面上定义静态方法而不仅仅是在实例层面上定义静态方法，如果使用的是ES6之前的语法，我们将不得不把实例成员添加到原型链中，而静态方法则被直接添加入构造函数中。
+
+```javascript
+function Person() {
+  this.hunger = 100
+}
+Person.prototype.eat = function () {
+  this.hunger--
+}
+Person.isPerson = function (person) {
+  return person instanceof Person
+}
+```
+
+
+
+就像你使用`get``set`前赘定义`getter`和`setter`一样，类允许你使用通过前缀`static`定义静态方法`Persion.isPerson`。
+
+
+
+下属代码利用了`Array#reduce`方法在类`MathHelper`中定义了一个静态方法`sum`，这个方法将用以计算所有传入所调用函数中的参数的总和。
+
+
+
+```javascript
+class MathHelper {
+  static sum(...numbers) {
+    return numbers.reduce((a, b) =&amp;gt; a + b)
+  }
+}
+console.log(MathHelper.sum(1, 2, 3, 4, 5))
+// &amp;lt;- 15
+```
+
+
+
+最后，还需要说明的是你可以结合`getter`，`setter`使用类静态方法，这在维持类全局状态时或者类使用单例模式时非常有用。当然你依旧可以用老方法而不用定义一个你永远不会实例化的类或者只会实例化一次的类，这就是JavaScript，一个高度灵活的语言。
+
+
+
+### JavaScript类的拓展
+
+你可以使用普通的JavaScript来拓展`Fruit`类，就像下面这样，我们声明子类时用到了深奥的`Parent.call(this)`以便能将参数传递给父类，以便我们可以正确地初始化子类，并把子类的接在父类的原型中。你在网上可以找到很多关于原型继承的知识，所以我们在这里就不再赘述了。
+
+
+
+```javascript
+function Banana() {
+  Fruit.call(this, &apos;banana&apos;, 105)
+}
+Banana.prototype = Object.create(Fruit.prototype)
+Banana.prototype.slice = function () {
+  this.pieces = 12
+}
+```
+
+
+
+鉴于需要记住这些不常用的知识，而且`Object.create`在ES5中才能使用，一般JS开发者都使用库来解决继承问题。比如说Node.js中的`util.inherits`,由于遗留问题，它通常比`Object.create`更受欢迎。
+
+
+
+```javascript
+const util = require(&apos;util&apos;)
+function Banana() {
+  Fruit.call(this, &apos;banana&apos;, 105)
+}
+util.inherits(Banana, Fruit)
+Banana.prototype.slice = function () {
+  this.pieces = 12
+}
+```
+
+
+
+考虑到除了banana有`name`，并已有确定的`calories`,以及有额外的`slice`方法用以把banana切为12块外，Banana构造函数和`Fruit`构造函数没有区别。下面的代码表现了我们咬(bite)的时候`Banana`的行为：
+
+```javascript
+const person = { satiety: 0 }
+const banana = new Banana()
+banana.slice()
+banana.bite(person)
+console.log(person.satiety)
+// &amp;lt;- 8.75
+console.log(banana.pieces)
+// &amp;lt;- 11
+console.log(banana.calories)
+// &amp;lt;- 96.25
+```
+
+
+
+Fruit类其实是被继承了，下面的代码中，我们创建了一个Banana类用以继承Fruit类，这种语法非常清晰，我们无须彻底弄明白原型的机制就可以获得我们想要的结果。如果我们想要给`Fruit`类传递参数，我们只需要使用`super`关键字即可，`super`关键字还可以用以调用存在于父类中的方法，比如说`super.chop`,它的使用不限于在`constructor`里面。
+
+
+
+```javascript
+class Banana extends Fruit {
+  constructor() {
+    super(&apos;banana&apos;, 105)
+  }
+  slice() {
+    this.pieces = 12
+  }
+}
+```
+
+
+
+尽管`class`关键字是静态的，我们还可以结合使用JavaScript的函数的特性和灵活性。所有返回构造函数的表达式都可以用于拓展，我们因此可以有一个构造函数工厂，并它当做基类。
+
+
+
+下面的代码中定义了一个`createJuicyFruit` 的函数，通过使用`super`我们可以给`Fruit`类传入`name`和`calories`,之后所有我们需要做的事情就是拓展`JuicyFruit` 类了。
+
+
+
+```javascript
+const createJuicyFruit = (...params) ={
+  class JuicyFruit extends Fruit {
+    constructor() {
+      this.juice = 0
+      super(...params)
+    }
+    squeeze() {
+      if (this.calories &amp;lt;= 0) {
+        return
+      }
+      this.calories -= 10
+      this.juice += 3
+    }
+  }
+class Plum extends createJuicyFruit(&apos;plum&apos;, 30) {
+}
+```
+
+
+
+接下来我们来先讲述`Symbol`,了解`Symbol`对于之后我们理解迭代至关重要，这将在本章后面进行讨论。
+
+
+
+## Symbols
+
+Symbol是ES6提供的一种新的JavaScript的基本类型。
