--- a/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
+++ b/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
@@ -340,21 +340,21 @@ class Banana extends Fruit {
 
 
 ```javascript
-const createJuicyFruit = (...params) ={
+const createJuicyFruit = (...params) =>
   class JuicyFruit extends Fruit {
     constructor() {
       this.juice = 0
       super(...params)
     }
     squeeze() {
-      if (this.calories &amp;lt;= 0) {
+      if (this.calories <= 0) {
         return
       }
       this.calories -= 10
       this.juice += 3
     }
   }
-class Plum extends createJuicyFruit(&apos;plum&apos;, 30) {
+class Plum extends createJuicyFruit('plum', 30) {
 }
 ```
 
@@ -366,4 +366,129 @@ class Plum extends createJuicyFruit(&apos;plum&apos;, 30) {
 
 ## Symbols
 
-Symbol是ES6提供的一种新的JavaScript的基本类型。
+Symbol是ES6提供的一种新的JavaScript的基本类型。 它代表唯一值，和字符串，数值不同的是，Symbol并没有字符的表达形式，如`text`字符串，或 `1`数值。Symbol的主要目的是用以实现协议，比如说，迭代协议使用Symbol定义对象如何被迭代，我们将在[Iterator Protocol and Iterable Protocol.]()这一节详细阐述。
+
+有三种不同蕾西的Symbol，每一种有不同的使用方法，它们分别是
+- `local Symbol`，这种类型又内置的Symbol包装对象创建，通过反射或者存储引用来使用。
+- `global Symbol`,由另外一个API创建 并且全局可用；
+- `well-konwn Symbol`,内置于JavaScript，用于定义内部语言行为。
+
+我们将讨论全部这三种，看看它们分别该怎么使用，从`local Symbol`说起吧。
+
+### Local Symbol
+
+Symbols 可通过 `Symbol` 包装对象创建，下例中，我们创建了我们的第一个Symbol。
+
+```js
+const first = Symbol()
+```
+
+尽管你可以在`Number`或`String`前使用`new`操作符，在`Symbol`前却不能使用，否则会抛出错误，这避免了错误和注入`new Number(3) !== Number(3)`这样令人误解的行为，下述代码表现了报错是什么样的：
+
+```js
+const oops = new Symbol()
+// <- TypeError, Symbol is not a constructor
+```
+
+为了调试遍历，新建的`Symbol`可以添加描述：
+
+```js
+const mystery = Symbol('my symbol')
+```
+
+和数值和字符串一样，Symbol是不可变的，但是和这些类型不同的是，Symbol是唯一的。下面代码中，描述并不影响唯一性，由相同描述创建的Symbol依旧是唯一且不相等的。
+
+```js
+console.log(Number(3) === Number(3))
+// <- true
+console.log(Symbol() === Symbol())
+// <- false
+console.log(Symbol('my symbol') === Symbol('my symbol'))
+// <- false
+```
+
+Symbols的类别为`symbol`，下述代码显示了对Symbol 使用 `typeof`返回的值：
+
+```js
+console.log(typeof Symbol())
+// <- 'symbol'
+console.log(typeof Symbol('my symbol'))
+// <- 'symbol'
+```
+
+Symbols 可以用作对象的属性名，这里我们用计算属性名来说明如何使用，如下所示，为了使用一个Symbol属性，您需要引用用于创建所述属性的Symbol。
+
+```js
+const weapon = Symbol('weapon')
+const character = {
+  name: 'Penguin',
+  [weapon]: 'umbrella'
+}
+console.log(character[weapon])
+// <- 'umbrella'
+```
+
+需要注意的是，许多传统的从对象中提取键的方法中对Symbol无效。下述代码表明`for...in `,`Object,keys`,`Object.getOwnPropertyNames`都不能访问到Symbol 属性。
+
+```js
+for (let key in character) {
+  console.log(key)
+  // <- 'name'
+}
+console.log(Object.keys(character))
+// <- ['name']
+console.log(Object.getOwnPropertyNames(character))
+// <- ['name']
+```
+
+Symbol的这方面的特性表明，ES6之前的没有Symbol的代码并不会由于Symbol的出现而受影响。类似的，如下代码所示，当将对象解析为JSON时，符号属性将被丢弃。
+
+```js
+console.log(JSON.stringify(character))
+// <- '{"name":"Penguin"}'
+```
+
+这意味着，Symbols绝不是隐藏属性的安全机制。即使在使用反射或序列化方法时不会发现符号属性，符号也会由专用方法揭示，如下一段代码所示。这意味着，Symbols 并非不可枚举的，只是一般情况下它不可见而已，通过`Object.getOwnPropertySymbols`我们可以获取任何对象中的所有`Symbol`.
+
+```js
+console.log(Object.getOwnPropertySymbols(character))
+// <- [Symbol(weapon)]
+```
+
+现在我们已经知道了Symbol该如何使用，下面我们谈谈它该在什么时候使用？
+
+### Symbols的使用案例
+
+Symbols可以通过库来使用，用于将对象映射到DOM元素，比如说，一个库需要连接日历的API对象和所提供的DOM元素。ES6之前，并不存在一种清晰的方法可用用以建立DOM和对象之间的映射。你可以给DOM元素添加一个属性指向API，但是这回用自定义属性污染DOM元素，这并不是一种好的实践方法。您必须小心地使用不被其他库使用的属性键，或者更糟糕的是，将来语言本身将使用的属性。这就让您使用一个数组查找表，该表为每个DOM / API对包含一个条目。然后，在一个长期运行的程序中，随着数组查找表越来越大，慢慢的查找操作就越来越慢了。
+
+使用Symbol则完全没有这类问题了，你不用担心定义的属性名会和将来语言中的属性名冲突，它们是唯一的。下述代码表明了如何使用Symbol建立DOM和日历API之间的映射。
+
+```js
+const cache = Symbol('calendar')
+function createCalendar(el) {
+  if (cache in el) { // does the symbol exist in the element?
+    return el[cache] // use the cache to avoid re-instantiation
+  }
+  const api = el[cache] = {
+    // the calendar API goes here
+  }
+  return api
+}
+```
+
+ES6 提供的一种新数据类型`WeakMap`,它可以用于唯一地将对象映射到其他对象，而不需要使用数组或将外部属性放置在我们希望查找的对象上。和数组查找表比起来，`WeakMap`查找复杂度始终为O(1),我们将在[ Leveraging ECMAScript Collections]()一节和其它ES6内置对象详细讨论`WeakMap`。
+
+### 通过符号定义协议
+
+早些时候，我们假设`Symbol`用以定义协议。协议是定义行为的通信契约或约定。简单说来，库可用使用Symbol ,然后我们可以使用从库中继承约定的对象。
+
+
+
+
+
+
+
+
+
+
+
