直译完 第三章中 Symbol 部分

--- a/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
+++ b/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
@@ -480,7 +480,199 @@ ES6 提供的一种新数据类型`WeakMap`,它可以用于唯一地将对象映
 
 ### 通过符号定义协议
 
-早些时候，我们假设`Symbol`用以定义协议。协议是定义行为的通信契约或约定。简单说来，库可用使用Symbol ,然后我们可以使用从库中继承约定的对象。
+早些时候，我们假设`Symbol`用以定义协议。协议是定义行为的通信契约或约定。简单说来，库可用使用Symbol ,然后依附于该库的对象就可以使用Symbol了。
+
+考虑下面的代码，这里我们用了一个特殊的`toJSON`方法，用以限制可以被`JSON.stringify`序列化的对象。正如你所看到的，序列化`character`对象返回了`toJSON`方法返回的对象的序列化模式。
+
+
+```js
+const character = {
+  name: 'Thor',
+  toJSON: () => ({
+    key: 'value'
+  })
+}
+console.log(JSON.stringify(character))
+// <- '"{"key":"value"}"'
+```
+
+相比之下，如果`toJSON`不是一个函数，原始的`character`对象将被序列化，`toJSON`只是其中一个属性，就像下面代码中那样。出现这种不一致的原因在于使用了常规属性来定义行为。
+
+```js
+const character = {
+  name: 'Thor',
+  toJSON: true
+}
+console.log(JSON.stringify(character))
+// <- '"{"name":"Thor","toJSON":true}"'
+```
+
+让`toJSON`修饰符是一个Symbol则更好，原因是它不会影响其它的对象属性，考虑到symbols 是唯一的，永远不会被序列化的，不调用`Object.getOwnPropertySymbols`永远不会暴露出来的，当制定一个`JSON.stringify`和对象如何被序列化的协议时，使用Symbol将是一种更好的选择。以下代码表明了如何使用Symbol定义`stringify`函数的序列化行为。
+
+```js
+const json = Symbol('alternative to toJSON')
+const character = {
+  name: 'Thor',
+  [json]: () => ({
+    key: 'value'
+  })
+}
+stringify(character)
+function stringify(target) {
+  if (json in target) {
+    return JSON.stringify(target[json]())
+  }
+  return JSON.stringify(target)
+}
+```
+
+使用Symbol 意味着我们需要使用计算属性名来在对象字面量中直接定义`json`的行为。它同样意味着，这种行为不会和其它的用户定义属性或者以后JS语言可能会加入的属性有冲突。另一个不同的地方在于，用户通过`stringify `函数是可以使用`json`符号的，因此它们可以自定义行为，我们可以通过下面的代码通过`stringify`暴露`json`符号，如下所示，这将绑定`stringify`函数和修改其行为的符号。
+
+```js
+stringify.as = json
+```
+
+通过暴露`stringify`函数，我们可以使用`stringify.as`符号了，这就让使用者可以通过自定义的符号来调整对象的行为了。
+
+当谈到使用使用符号来描述行为的优点时，与传递给`stringify`函数一个选项成对比的是，我们还需要考虑以下几点。首先，给函数添加选项参数改变了它的公有API，而改变一个函数的内在行为来支持另外一个符号不会影响公有API。使用每一个选项包含不同对象的`object`对象缓和了这一影响，不过在每一个函数调用中要求一个`options`对象并不总是很方便。
+
+通过符号定义行为的优点是你可以增强或自定义对象的行为而不影响除了所分配的符号值之外的所有东西，原始的内部实现机制很可能也不会受影响。使用符号的好久就在于，当引入新的语言特性时，您不会受到名称冲突的影响。
+
+除了local Symbol，还有一种`global symbol`它可以跨代码域访问，且听我细细道来。
+
+### 全局符号
+
+代码域指的是任何JavaScript表达式的执行上下文，比如说你的应用当前运行的页面，页面中的`<iframe>`，`eval`运行的脚本，以及任意类型的`worker`，比如说`web worker`,`service workers`或者`shared workers`,这些执行上下文每一种都有其全局对象比如说页面的全局对象`window`不能被`ServiceWorker`使用。与此不同的是，全局符号可以被任何代码域访问。
+
+有两种和运行时的全局符号交互的方法，它们是`Symbol.for`和`Symbol.keyFor`。我们看看它们分别如何使用？
+
+#### 通过`Symbol.for(key)`获取symbols
+
+`Symbol.for(key)`方法将在运行时范围符号注册表中查找`key`,如果全局注册表中存在`key`则返回该`Symbol`，如果不存在该`key`的Symbol，在全局注册表中将创建以该`key`代表的Symbol，这意味着，`Symbol.for(key)`是幂等的，它先查找，不存在就创建，然后返回查找或新创建的Symbol。
+
+下面的代码中，第一次调用`Symbol.for`创建了一个标记为`example`的Symbol，并把它添加到注册表，并返回该Symbol，第二次调用`Symbol.for`由于该`key`已经在注册表中存在，返回了相同的符号，与第一次的返回值相同。
+
+```js
+const example = Symbol.for('example')
+console.log(example === Symbol.for('example'))
+// <- true
+```
+
+全局的符号注册表通过`key`跟踪符号，需要注意的是`key`也将用做新创建的Symbol的`description`。考虑到这些符号在运行时是全局的，你可能需要在符号keys之前添加前缀用以区分你的逐渐或者库，用以避免潜在的命名冲突。
+
+#### 使用`Symbol.keyFor(symbol)`来提取符号的keys
+
+比如说现在存在一个符号`symbol`，`Symbol.keyFor(symbol)`将返回全局注册表中该`symbol`对应的`key`值。下面的例子表明了我们如何使用`Symbol.keyFor`来获取对应`Symbol`的`key`:
+
+```js
+const example = Symbol.for('example')
+console.log(Symbol.keyFor(example))
+// <- 'example'
+```
+
+请注意，如果该`symbol`不在全局运行注册表中，该方法将返回`undefined`。
+
+```js
+console.log(Symbol.keyFor(Symbol()))
+// <- undefined
+```
+
+同样需要注意的是在全局符号注册表中不可能用`local Symbol`匹配到值，即使它们的描述相同也是如此，这是因为，local Symbol 不是全局符号注册表的一部分，如下代码所示：
+
+```js
+const example = Symbol.for('example')
+console.log(Symbol.keyFor(Symbol('example')))
+// <- undefined
+```
+
+现在你已经知道了全局符号注册表的两种用法，下面我们来看看还有那些别的值得考虑的因素。
+
+
+#### 最佳实践和需要考虑的因素
+
+全局的运行注册表意味着符号可以被任何代码域获取，在任何代码域中调用，全局的注册表都将返回相同的对象指向。下面的例子中，我们展示了`Symbol.for`是如何在一个页面和一个`<iframe>`中返回相同的Symbol的。
+
+```js
+const d = document
+const frame = d.body.appendChild(d.createElement('iframe'))
+const framed = frame.contentWindow
+const s1 = window.Symbol.for('example')
+const s2 = framed.Symbol.for('example')
+console.log(s1 === s2)
+// <- true
+```
+
+使用全局符号需要权衡，一方面，它使得库可以容易的对外暴露其Symbol，另一方面，它们也可以使用`local Symbol`暴露他们的API，很明显，符号注册表在符号需要夸代码域使用时非常有用，比如说跨`ServiceWorker`和浏览器页面。当你不想使用引用而直接想直接使用`Symbol`时，全局符号也非常方便，你可以直接调用，因为一个`key`永远对应的都是同一个`Symbol`，你需要记住，虽然有这些优点，如果你使用类似于`each`,`contains`这种泛滥形Symbol名称，可能还是会导致不必要的冲突后果。
+
+还有另外一种类型的Symbol，内置的常用Symbol。
+
+### 众多周知的Symbols
+
+到现在为止，我们已经讨论了可以通过`Symbol`函数创建的local Symbol 和 可以通过`Symbol.for`创建的全局Symbol。我们将讲到的第三种也是最后一种Symbol就是`well-known Symbol`了。它们内置于语言中而非由JS开发者创建，它们为内置的语言行为添加了钩子，允许你拓展或者自定义这门语言里在ES6之前不能使用的一些方面。
+
+
+描述在不破坏代码的情况下，如何通过Symbols 给语言添加额外的功能的最好的例子是`Symbol.toPrimitive` 符号。它可以用分配一个函数来确定一个对象如何对应到一个默认值。该函数接收一个`hint`参数，参数可以是`string`,`number`或`default`，用以指明默认值的期待类型。
+
+```js
+const morphling = {
+  [Symbol.toPrimitive](hint) {
+    if (hint === 'number') {
+      return Infinity
+    }
+    if (hint === 'string') {
+      return 'a lot'
+    }
+    return '[object Morphling]'
+  }
+}
+console.log(+morphling)
+// <- Infinity
+console.log(`That is ${ morphling }!`)
+// <- 'That is a lot!'
+console.log(morphling + ' is powerful')
+// <- '[object Morphling] is powerful'
+```
+
+
+另一个众所周知的symbol是`Symbol.match`,是个常规的设置`Symbol.match`为`false`的常规表达式如果被传递给`.startWith`,`.endWith`或`.includes`时将被视为字符串字面量。这三个函数是ES6提供的新的字符串方法。首先`.startsWith`用于判断某个字符串是否已另外一个字符串开头，`.endsWith`则用以判别该字符串是否已某字符串结尾，`.includes`方法则在某字符串包含另一个字符串时返回`true`。下述代码表明了`Symbol.mathc`如何用以对比一个字符串和另一个由正则表达式表示的字符串。
+
+```js
+const text = '/an example string/'
+const regex = /an example string/
+regex[Symbol.match] = false
+console.log(text.startsWith(regex))
+// <- true
+```
+
+如果正则表达式没有通过Symbol修改，这里将抛出错误，因为`.startWith`方法希望其参数是一个字符串而非正则表达式。
+
+
+#### 不在注册表中但是跨域共享
+
+语言内置的这些Symbol是跨代码域共享的，下述代码展示了`Symbol.iterator`在`<iframe>`中是具有相同的指向的。
+
+```js
+const frame = document.createElement('iframe')
+document.body.appendChild(frame)
+Symbol.iterator === frame.contentWindow.Symbol.iterator
+// <- true
+```
+
+需要注意的是，虽然语言内置的这些Symbol是跨代码块共享的，但是他们并不在全局符号注册表中，下述代码中，我们想要找到`Symbol.iterator`的`key`值，返回值是`undefined`，这意味着符号并不在全局注册表中。
+
+```js
+console.log(Symbol.keyFor(Symbol.iterator))
+// <- undefined
+```
+
+另外一个常用的符号是`Symbol.iterator`,它被不同的语言用以遍历一个序列，就像在任意对象中定义一个函数并分配给一个用符号定义的属性。下一章中，我们将详细讲述`Symbol.iterator`的细节内容，并广泛在迭代器和迭代协议中使用它。
+
+## 内置对象的改进
+
+
+
+
+
 
 
 
