直译完第三章，但是关于装饰器部分的译文有较大的修改空间
大致知道了装饰器是什么，但是似乎依旧不会使用，待加强。

--- a/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
+++ b/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
@@ -669,12 +669,376 @@ console.log(Symbol.keyFor(Symbol.iterator))
 
 ## 内置对象的改进
 
+我们在[ES6 Essentials]()一章，已经讲述过对象字面量语法的改进，关于对象一些内置的静态方法的改进我们却还未涉及到。是时候讨论一下有哪些新改变了。
+
+前面我们说过`Object.getOwnPropertySymbols`的意思，下面我们看看`Object.assign`,`Object.is`以及`Object.setPrototypeOf`分别是什么意思。
+
+### 使用`Object.assign`来拓展对象
+
+需要给配置对象提供默认值的需求我们都非常熟悉，一般说来，库或者设计良好的交互组件都有明智的默认值用以应对大多数使用情况。
+
+以一个Markdown库来说，可能会仅仅通过一个`input`参数转行Markdown为Html。这就是它最典型的使用示例，简单的解析Markdown，因此该库不需要用户提供任何选项。然后，该库可能支持很多不同的用以修改渲染行为的选项，比如说有一个选项运行`<script>`或`<iframe>`标签，或者一个选项用css来高亮渲染代码片段。
+
+比如说，设想，你希望提供一组如下的默认选项
+
+```js
+const defaults = {
+  scripts: false,
+  iframes: false,
+  highlightSyntax: true
+}
+```
+
+一个人可能使用解构将`defaults`对象作为`options`为默认配置参数，在本例中，如果用户想要自定义，用户必须提供每个选项的值。
+
+```js
+function md(input, options=defaults) {
+}
+```
+
+我们需要用某种方法将默认值和用户提供的值合并使用，这就是`Object.assign`的使用场景了，如下代码所示，我们从一个空对象`{}`开始，`Object.assign`将修改它最终返回最后的结果，实现过程是这样的，我们首先复制默认值，然后复制新添加的option到覆盖重复值，因此，最终的结果`config`对象将会是包含默认值和用户自定义值的对象。
+
+```js
+function md(input, options) {
+  const config = Object.assign({}, defaults, options)
+}
+```
 
 
+> ####理解`Object.assign`的目标
+
+> `Object.assign`函数将改变它的第一个参数，它的签字将是`(target, ...sources)`,所有的资源 都会被应用到`target`上，一个个的source一个个的property。
 
 
+> 考虑如下的场景，如果我们没有传递一个空对象作为目标对象而是传递了`defaults`作为目标对象，那么`Object.assign()`将改变`defaults`对象的值，这会导致默认值的丢失，获得一些错误的值，在复制对象的过程中，虽然这样会得到和前面那个例子中一样的值，我们的默认值也被更改了，这改变了`md`调用时的结果。
+
+>
+```js
+function md(input, options) {
+  const config = Object.assign(defaults, options)
+}
+```
+
+> 考虑到这个原因，最好每次都给target传递一个新的空对象。
 
 
+对于任何拥有默认值，用户又可以重新分配属性值的属性，用户提供的值将占主导地位。`Object.assign`是这样工作的，首先我们取得第一个传递给它的参数，我们称之为`target`，然后遍历所有其它的参数，（我们把其它的参数称为`source`）。对于`sources`中的每一个source，它的没一个值都将被迭代并分配给`target`.结果是，最右边的`sources`，在本例中也就是`options`对象，将覆盖重写前面的分配值，过程如下述代码所示：
+
+```js
+const defaults = {
+  first: 'first',
+  second: 'second'
+}
+function applyDefaults(options) {
+  return Object.assign({}, defaults, options)
+}
+applyDefaults()
+// <- { first: 'first', second: 'second' }
+applyDefaults({ third: 3 })
+// <- { first: 'first', second: 'second', third: 3 }
+applyDefaults({ second: false })
+// <- { first: 'first', second: false }
+```
+
+在语言内置`Object.assign`之前，开发者已经进行了很多类似的实践，使用类类似`assign`或者`extend`这样的名字。添加`Object.assign`到语言中使得这个需求用起来非常简单。
+
+需要注意的是，`Object.assign`只考虑可枚举的属性，包括字符串属性和符号属性。
+
+```js
+const defaults = {
+  [Symbol('currency')]: 'USD'
+}
+const options = {
+  price: '0.99'
+}
+Object.defineProperty(options, 'name', {
+  value: 'Espresso Shot',
+  enumerable: false
+})
+console.log(Object.assign({}, defaults, options))
+// <- { [Symbol('currency')]: 'USD', price: '0.99' }
+```
+
+需要注意的是`Object.assign`也不是万能的，比如说很多需要需要深复制的能力，`Object.assign`不会对对象进行回归处理，值为对象的将会被`target`直接引用，而不会进行每一项的递归复制。
+
+下例中，你可能希望`f`属性可以被添加到`target.a`，而保持`b.c`,`b.d`不变，但是实际上，当使用`Object.assign`时，`b.c`和`b.d`属性丢失了。
+
+```js
+Object.assign({}, { a: { b: 'c', d: 'e' } }, { a: { f: 'g' } })
+// <- { a: { f: 'g' } }
+```
+
+同样的，数组也不会获取任何特殊的对待，以下代码中，如果你期待`Object.assign`进行递归处理，你将大失所望。下面的代码中，你可以期待结果中是有`d`的。
+
+```js
+Object.assign({}, { a: ['b', 'c', 'd'] }, { a: ['e', 'f'] })
+// <- { a: ['e', 'f'] }
+```
+
+在本书写作过程中，存在一个处于`stage 3`的ECMAScript提议，用以在对象中使用拓展符，就像之前提到的你可以在ES6的数组等可迭代对象中使用一样。在一个对象上拓展另外一个对象和使用`Object.assign`的结果类似。
+
+下述代码表明了一些拓展一个对象的一些属性到另外一个对象上的方法，以及用`Object.assign`该如何使用。你也许也发现了，使用对象拓展更为简洁，如果这个一旦成为标准，它应该被优先使用。
+
+```js
+const grocery = { ...details }
+// Object.assign({}, details)
+const grocery = { type: 'fruit', ...details }
+// Object.assign({ type: 'fruit' }, details)
+const grocery = { type: 'fruit', ...details, ...fruit }
+// Object.assign({ type: 'fruit' }, details, fruit)
+const grocery = { type: 'fruit', ...details, color: 'red' }
+// Object.assign({ type: 'fruit' }, details, { color: 'red' })
+```
+
+
+与此对应，该提案也包含对象剩余值，就像数组中的剩余模式一样，任何时候我们解构一个对象时我们可以使用对象剩余值。
+
+下面的例子展示了如何利用对象剩余值获取没有被展示对象名的对象。同样需要注意的是对象剩余值需要位于解构的最后面，就像数组的解构模式一样。
+
+```js
+const getUnknownProperties = ({ name, type, ...unknown }) =>
+  unknown
+getUnknownProperties({
+  name: 'Carrot',
+  type: 'vegetable',
+  color: 'orange'
+})
+// <- { color: 'orange' }
+```
+
+我们可以利用类似的方法在变量声明中解构对象，下面的例子中，每一个未被明确结构的属性都将位于`meta`对象中。
+
+```js
+const { name, type, ...meta } = {
+  name: 'Carrot',
+  type: 'vegetable',
+  color: 'orange'
+}
+// <- name = 'Carrot'
+// <- type = 'vegetable'
+// <- meta = { color: 'orange' }
+```
+
+我们将在[Practical Considerations.]()一章再详细讨论对象解构和剩余值。
+
+
+### 使用`Object.is`对比对象
+
+`Object.is`方法和严格相等运算符`===`略有不同，最重要的地方在于`Object.is(a,b)`和`a===b`是相等的，但是有两个不同的地方，那就是`NaN`以及，`-0`和`0`。
+
+当`NaN`与`NaN`相比较时，严格相等运算符`===`将返回`false`,因为`NaN`和本身也不相等，`Object.is`则在这种情况下返回`true`.
+
+```js
+NaN === NaN
+// <- false
+Object.is(NaN, NaN)
+// <- true
+```
+
+类似的，使用严格相等运算符比较`0`和`-0`会得到`true`,而使用`Object.is`则会返回`false`.
+
+```js
+-0 === +0
+// <- true
+Object.is(-0, +0)
+// <- false
+```
+
+这种不同看起来没什么大不了的，但是由于`NaN`的怪癖行为，它的处理一直都很沉重，比如说`typeof NaN`会返回`number`,而它自己和自己又不相等。
+
+### Object.setPrototpyeOf
+
+`Object.setPrototypeOf`的作用就像它的名字描述的那样，它设置它的原型指向另外一个对象。与遗留方法`__proto__`相比，它被认为是设置原型的正常方法。
+
+在ES6之前，我们在ES5中引入了`Object.create`，利用这种方法，我们可以一个对象，这个对象以任何传递给`Object.create`的参数作为原型链。如下所示;
+
+```js
+const baseCat = { type: 'cat', legs: 4 }
+const cat = Object.create(baseCat)
+cat.name = 'Milanesita'
+```
+
+不过`Object.create`方法只能在给新创建的对象指定原型，然而，使用`Object.setPrototypeOf`可以用以改变任何已经存在的对象的原型链，如下代码所示：
+
+```js
+const baseCat = { type: 'cat', legs: 4 }
+const cat = Object.setPrototypeOf(
+  { name: 'Milanesita' },
+  baseCat
+)
+```
+
+需要注意的是与`Object.create`比起来，`Object.setPrototypeOf`具有严重的性能问题，因此在你决定使用前还需要仔细考虑。
+
+> #### 对性能问题的说明
+> 使用`Object.setPrototypeOf`来改变一个对象的原型是一个昂贵的操作，MDN是这样解释这个问题的：
+> 考虑到现代浏览器JavaScript引擎优化属性访问的本质，改变一个对象的原型是一个非常慢的操作，在每一个浏览器和每一个JavaScript引擎中，改变继承在性能方面的影响是微妙而遥远的，时间不仅仅发生在`obj.__proto__`语句中，而且还可能拓展到任何原型被改变的对象。如果你考虑性能的影响，你应该避免改变原型，推荐的做法是，使用需要的原型使用`Object.create()`创建新的对象。
+> 
+
+
+### 装饰器(Decorators)
+
+对于大多数编程语言而言，装饰器不是一个新概念。在现代编程语言中，装饰器模式相当常见，c# 中 有`attributes`,Java中有`annotations`，Python中有`decorators`等等。JavaScript的装饰器提案也正在进行中，目前其处于Stage2。
+
+#### JavaScript 装饰器 基础介绍
+
+JavaScript中的装饰器语法和Python的非常类似。JavaScript的装饰器可以应用于任何对象或者静态声明的属性。诸如对象字面量声明或`class`声明，甚至它们可以吃`get`,`set`存储器，甚至`static`属性。
+
+该提议中表明，装饰器的定义使用`@`之后是一系列的点符号，以及可选的参数列表？？。下面是一些例子：
+
+- `@decorators.frozen`是一个有效的装饰器
+- `@decorators.frozen(true)`是一个有效的装饰器
+- `@decorators().frozen()`会出现语法错误
+- `@decorators['frozen']`会出现语法错误
+
+
+`class`声明前可以添加0个或多个装饰器，`class`内部也可以：
+
+```js
+@inanimate
+class Car {}
+
+@expensive
+@speed('fast')
+class Lamborghini extends Car {}
+
+class View {
+  @throttle(200) // reconcile once every 200ms at most
+  reconcile() {}
+}
+```
+
+装饰器的执行类似函数，成员装饰函数获取成员装饰器并返回成员装饰器，成员装饰器和属性装饰器类似，但是呈现不同的形态，下面的代码有一个成员装饰器界面，但是通过装饰器提案定义。一个可选的`finisher`函数被用以接受类构造函数，允许我们被对装饰的对象装修相关操作。
+
+```js
+interface MemberDescriptor {
+  kind: "Property"
+  key: string,
+  isStatic: boolean,
+  descriptor: PropertyDescriptor,
+  extras?: MemberDescriptor[]
+  finisher?: (constructor): void;
+}
+```
+
+下面的例子中，我们定义了一个`readonly`成员描述符，使得被描述的对象不可写，利用对象剩余值和拓展运算符，我们修改了属性描述符为`non-writable`同时保持了其它部分不变。
+
+
+```js
+function readonly({ descriptor, ...rest }) {
+  return {
+    ...rest,
+    descriptor: {
+      ...descriptor,
+      writable: false
+    }
+  }
+}
+```
+
+
+类装饰器将装饰`ctor`，被描述类的构造函数，`heritage`参数，当装饰器类拓展其它类时包含了父类，`members`数组，里面是被修饰的类的成员描述符列表。
+
+通过在每一个成员描述符上重用`readonly`成员描述符，我们可以实现一个类级别的`readonlyMembers`，如下所示:
+
+```js
+function readonlyMembers(ctor, heritage, members) {
+  return members.map(member => readonly(member))
+}
+```
+
+### 堆栈装饰器和对不可变的警告
+
+考虑到不可变形，你可能想要基于已有的装饰器返回一个新的装饰器，而不改变原先的装饰器，尽管这是一种好想法，但是可能会返回意料之外的结果，这是由于它可能会装饰同一种类或同一类成员好多次。
+
+如果一段代码中的任何描述符不考虑它们接收的`descriptor`参数二返回一个全新的装饰器，它们实际上在装饰器返回之前丢失了所有的装饰器。
+
+考虑到提供的装饰器，我们应该小心的来写装饰器。永远都只基于原始的以参数提供的`descriptor `创建一个装饰器。
+
+
+### 使用示例：C# 中的 Attributes
+
+我是通过一个Ultima Online（注：这是一个有几十年历史的基于终极宇宙的角色扮演类游戏）在很久以前熟悉的C#语言，这个游戏的服务器使用的是C#代码编写的RunUO。RunUO是我用过的最美待代码库之一了。
+
+他们将服务器软件分发为可执行文件和一系列cs文件。runuo会在运行时编译这些`.cs`文件，并动态的混合他们为程序。结果是你不再需要使用Visual Studio IED了，也不需要任何其它的编辑`.cs`脚本之外的编程知识了。这使得RunOS对于新开发者是非常易学的。
+
+RunOS非常依赖于反映reflection，为了让不熟悉编程的人员但仍然对改变游戏的一些细节感兴趣自定义，它的开发者投入了巨大的精力。比如说，龙的呼吸火焰造成多少伤害，或发射火球的频率。良好的开发体验使他们的主要哲学，你可以通过复制一个怪物文件，改变它来继承龙类，重写一些属性来改变它的颜色，它的伤害输出等等，来创建一种新的龙。
+
+正如他们让创建新怪物或NPC非常容易，他们还依靠反射来为游戏中的管理员提供功能。管理员可以在游戏内运行命令，通过简单的在物品或怪物上点击来可视化或者改变一些属性。
+
+![Modifying properties for a RunUO item in-game from the Ultima Online client](https://ponyfoo.com/books/practical-modern-javascript/img/pmjs_0301.png)
+
+并非一个类中的所有属性在游戏中都可以修改，一些属性只能供内部使用，或者在运行时不可修改。RunUO提供了一个名为`CommandPropertyAttribute`的装饰器，这个装饰器定义了游戏中可以被修改的属性，而且也让你指明了属性的可读写等级。在整个RunUO代码库中，这个装饰器被广泛的使用。
+
+控制用户角色如何工作的类`PlayerMobile`是一个观察这些特性的好地方，`PlayerMobile`拥有一些在游戏中管理者可接触到的属性，这里有一系列的`setter`和`getter`,但是只有第一个拥有`CommandProperty`属性，这使得游戏操作者在游戏中可修改这些属性。
+
+```c#
+[CommandProperty(AccessLevel.GameMaster)]
+public int Profession
+{
+  get{ return m_Profession }
+  set{ m_Profession = value }
+}
+
+public int StepsTaken
+{
+  get{ return m_StepsTaken }
+  set{ m_StepsTaken = value }
+}
+```
+
+C# 的属性和JavaScript的装饰器在一个有趣的不同地方在于，C#中的映射允许我们拖出拥有`getCustomAttributes`的对象的所有自定义属性。RunUO正是使用了这种特性来在拉去每个应该在游戏中可用的属性的信息，这时候会出现一个对话框使得管理者在游戏中查看或修改对象的属性。
+
+### 在JavaScript的标记属性
+
+在JavaScript中并不存在类似的东西，不存在于已有的草案中，至少不能获取属性的自定义特征。这意味着，JavaScript是一个高动态的语言，创建这类的标签并非难事。使用命令行属性装饰`Dog`类并不会和C# 中的 RunUO差别太多。
+
+```js
+class Dog {
+  @commandProperty('game-master')
+  name;
+}
+```
+
+和C#中的实现机制相比，在JavaScript中实现`commandProperty`函数会稍微复杂一点点，考虑到JavaScript中的装饰器没有反映，我们可以使用一个运行时范围的符号来围绕给定类来保持一个命令属性数组。
+
+```js
+function commandProperty(writeLevel, readLevel = writeLevel) {
+  return ({ key, ...rest }) => ({
+    key,
+    ...rest,
+    finisher(ctor) {
+      const symbol = Symbol.for('commandProperties')
+      const commandPropertyDescriptor = {
+        key,
+        readLevel,
+        writeLevel
+      }
+      if (!ctor[symbol]) {
+        ctor[symbol] = []
+      }
+      ctor[symbol].push(commandPropertyDescriptor)
+    }
+  })
+}
+```
+
+`Dog`类因此可以拥有尽可能多的我们认为必要的命令行属性，每一个都将被列在一个符号属性后。为了找到所有给定类的命令属性，我们只需要使用下面这个函数，它从符号属性中接受一组命令属性，并设置其默认值为`[]`，我们同样保存了原始数组的复制数组用以防止用户由于偶然而改变了它。
+
+```js
+function getCommandProperties(ctor) {
+  const symbol = Symbol.for('commandProperties')
+  const properties = ctor[symbol] || []
+  return [...properties]
+}
+getCommandProperties(Dog)
+// <- [{ key: 'name', readLevel: 'game-master',
+// writeLevel: 'game-master' }]
+```
+
+然后，我们可以迭代已知的安全命令属性，并在运行时通过简单的UI呈现修改这些属性的方法，而不是维持可被修改的长列表，也不需要依靠某种试探性的方法来不时地打破，或者使用某种限制性的命名约定。相比这些，装饰器在我们想要对一个属性上标志特殊的属性时是最简洁有效的。
+
+下一章，我们将一起看看ES6提供的关于对象迭代的一些更新，然后我们也将讨论一下如何利用`promises`和`generators`来控制异步。
 
 
 
