修复了代码中的一些乱码符号

--- a/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
+++ b/docs/第3章. Classes,Symbols,Objects 和 Decorators.md
@@ -132,8 +132,8 @@ class Log {
     console.log(args)
   }
 }
-new Log(&apos;a&apos;, &apos;b&apos;, &apos;c&apos;)
-// &amp;lt;- [&apos;a&apos; &apos;b&apos; &apos;c&apos;]
+new Log('a', 'b', 'c')
+// <- ['a' 'b' 'c']
 ```
 
 
@@ -192,10 +192,10 @@ class LocalStorage {
 你可以按下面这样使用`LocalStorage`类。所有分配给`ls.data`的值将被转换为JSON对象字符串，并存储在`localStorage`中。然后，当需要读取时，想用的`key`将用以在之前存储的内容中读取数据，以JSON的格式进行解析，并返回。
 
 ```javascript
-const ls = new LocalStorage(&apos;groceries&apos;)
-ls.data = [&apos;apples&apos;, &apos;bananas&apos;, &apos;grapes&apos;]
+const ls = new LocalStorage('groceries')
+ls.data = ['apples', 'bananas', 'grapes']
 console.log(ls.data)
-// &amp;lt;- [&apos;apples&apos;, &apos;bananas&apos;, &apos;grapes&apos;]
+// <- ['apples', 'bananas', 'grapes']
 ```
 
 
@@ -208,16 +208,16 @@ class Person {
     this.satiety = 0
   }
   eat(fruit) {
-    while (fruit.pieces &amp;gt; 0) {
+    while (fruit.pieces > 0) {
       fruit.bite(this)
     }
   }
 }
-const plum = new Fruit(&apos;plum&apos;, 40)
+const plum = new Fruit('plum', 40)
 const person = new Person()
 person.eat(plum)
 console.log(person.satiety)
-// &amp;lt;- 40
+// <- 40
 ```
 
 
@@ -249,11 +249,11 @@ Person.isPerson = function (person) {
 ```javascript
 class MathHelper {
   static sum(...numbers) {
-    return numbers.reduce((a, b) =&amp;gt; a + b)
+    return numbers.reduce((a, b) => a + b)
   }
 }
 console.log(MathHelper.sum(1, 2, 3, 4, 5))
-// &amp;lt;- 15
+// <- 15
 ```
 
 
@@ -270,7 +270,7 @@ console.log(MathHelper.sum(1, 2, 3, 4, 5))
 
 ```javascript
 function Banana() {
-  Fruit.call(this, &apos;banana&apos;, 105)
+  Fruit.call(this, 'banana', 105)
 }
 Banana.prototype = Object.create(Fruit.prototype)
 Banana.prototype.slice = function () {
@@ -285,9 +285,9 @@ Banana.prototype.slice = function () {
 
 
 ```javascript
-const util = require(&apos;util&apos;)
+const util = require('util')
 function Banana() {
-  Fruit.call(this, &apos;banana&apos;, 105)
+  Fruit.call(this, 'banana', 105)
 }
 util.inherits(Banana, Fruit)
 Banana.prototype.slice = function () {
@@ -305,11 +305,11 @@ const banana = new Banana()
 banana.slice()
 banana.bite(person)
 console.log(person.satiety)
-// &amp;lt;- 8.75
+// <- 8.75
 console.log(banana.pieces)
-// &amp;lt;- 11
+// <- 11
 console.log(banana.calories)
-// &amp;lt;- 96.25
+// <- 96.25
 ```
 
 
@@ -321,7 +321,7 @@ Fruit类其实是被继承了，下面的代码中，我们创建了一个Banana
 ```javascript
 class Banana extends Fruit {
   constructor() {
-    super(&apos;banana&apos;, 105)
+    super('banana', 105)
   }
   slice() {
     this.pieces = 12
