对spread转换类数组对象为数组添加额外的说明
拓展运算符只能转换可迭代的类数组对象，比如在`node`中使用`cheerio`获取到的某个元素集合是类数组对象，单却并非是可迭代对象，此时使用
`spread`会失败，而使用`Array.from()`则可以正常转换。

--- a/docs/第2章. ES6 概要.md
+++ b/docs/第2章. ES6 概要.md
@@ -789,7 +789,10 @@ console.log(sumAll(1, 2, 5))
 
 ### 拓展运算符
 
-拓展运算符可以把任意可枚举对象转换为数组，使用拓展运算符可以高效处理目标对象，在拓展目前前添加`...`就可以使用拓展运算符了。下例中`...arguments`就把函数的参数转换为了数组字面量。
+拓展运算符可以把任意**可迭代对象**转换为数组，使用拓展运算符可以高效处理目标对象，在拓展目前前添加`...`就可以使用拓展运算符了。下例中`...arguments`就把函数的参数转换为了数组字面量。
+
+> 需要注意拓展运算符只能转换可迭代的类数组对象，比如在`node`中使用`cheerio`获取到的某个元素集合是类数组对象，单却并非是可迭代对象，此时使用`spread`会失败，而使用`Array.from()`则可以正常转换。
+
 
 ```js
 function cast() {
